# bukvar

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOOKS.md  README.md  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  ci.yml
examples/: README.md
examples/input/: NotificationService.java  StringUtils.java  api-reference.md  cart-service.js  glagolica-features.md  http-client.js  installation-guide.md  migration_manager.py  processor.py  readme.md  utils.js
examples/output/json/: NotificationService.java.json  StringUtils.java.json  api-reference.md.json  cart-service.js.json  glagolica-features.md.json  http-client.js.json  installation-guide.md.json  migration_manager.py.json  processor.py.json  readme.md.json  utils.js.json
hooks/: pre-commit
src/: bench.rs  cli.rs  error.rs  main.rs  sourcemap.rs  streaming.rs  validate.rs
src/ast/: document.rs  mod.rs  nodes.rs  span.rs  types.rs
src/formats/: mod.rs
src/formats/json/: kinds.rs  mod.rs
src/formats/reader/: decode.rs  helpers.rs  mod.rs
src/formats/writer/: encode.rs  helpers.rs  mod.rs  strings.rs
src/markdown/: frontmatter.rs  linkdef.rs  mod.rs  scanner.rs
src/markdown/block/: code.rs  container.rs  custom.rs  leaf.rs  mod.rs
src/markdown/inline/: emphasis.rs  links.rs  mod.rs  special.rs
src/parsers/: mod.rs
src/parsers/javadoc/: mod.rs  tags.rs
src/parsers/jsdoc/: mod.rs  tags.rs
src/parsers/pydoc/: google.rs  item.rs  mod.rs  numpy.rs  sphinx.rs
src/processor/: files.rs  mod.rs  parse.rs  stats.rs  write.rs
